# generator_standard

./: .gitignore  README.md  generator.py  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  conf.py  generator.rst  index.rst  patterns.rst  requirements.txt  vocs.rst
generator_standard/: __init__.py  generator.py  test_generator.py  test_vocs.py  vocs.py
generator_standard/tests/: test_generator.py  test_vocs.py
