[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'Campa_Generator_Standard'
description = 'An effort to standardize the interface of generators in optimization libraries'
readme = 'README.md'
version = '0.1'
requires-python = '>=3.9'
keywords = ['optimization', 'workflows', 'generators']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
