[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'Campa_Generator_Standard'
description = 'An effort to standardize the interface of generators in optimization libraries'
readme = 'README.md'
version = '0.1'
dependencies = ["pydantic"]
requires-python = '>=3.10'
keywords = ['optimization', 'workflows', 'generators']
dependencies = ['pydantic']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
